<resources>
    <string name="app_name">Projet libre</string>
    <string name="item1">Profile</string>
    <string name="item2">Map</string>
    <string name="item3">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragmentMap">MAP</string>
    <string name="fragmentProfile">PROFILE</string>
    <string name="fragmentSettings">SETTINGS</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_login">Allready have an account ? Login </string>
    <string name="action_register">No account yet? Create one</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is not secure enough</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_mail">This email is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
