<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.univ_tours.polytech.projetlibre.controller.SignupActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="1">


    <ImageView android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.15" />

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        style="@android:style/Widget.ScrollView"
        android:layout_weight="0.48">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <AutoCompleteTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimaryInverseDisableOnly"
                android:textColorHighlight="@color/common_google_signin_btn_text_dark_default"
                android:textColorHint="@color/common_plus_signin_btn_text_dark_focused"
                android:textColorLink="?android:attr/textColorPrimaryInverseDisableOnly" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimaryInverseDisableOnly"
                android:textColorHighlight="@color/common_google_signin_btn_text_dark_default"
                android:textColorHint="@color/common_plus_signin_btn_text_dark_focused"
                android:textColorLink="?android:attr/textColorPrimaryInverseDisableOnly" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorLink="?android:attr/textColorPrimaryInverseDisableOnly"
                android:textColorHint="@color/common_google_signin_btn_text_dark_default"
                android:textColorHighlight="@color/common_google_signin_btn_text_dark_default"
                android:textColor="?android:attr/textColorPrimaryInverseDisableOnly" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_up"
            android:textStyle="bold"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark" />

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/action_login"
            android:gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
