<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/main_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="fr.univ_tours.polytech.projetlibre.controller.MainActivity"
            android:weightSum="1">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="405dp" />

            <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:tabIndicatorColor="?attr/colorPrimaryDark"
                android:id="@+id/footer">

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item1" />

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item2" />

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item3" />
            </android.support.design.widget.TabLayout>

            <!--<view-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--class="android.support.v4.view.ViewPager"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:id="@+id/viewPager"-->
            <!--android:layout_above="@+id/footer" />-->


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"></android.support.v7.widget.Toolbar>

            <ImageView
                android:layout_width="215dp"
                android:layout_height="62dp"
                app:srcCompat="@drawable/logo"
                android:id="@+id/imageView2" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/logout"
        android:layout_marginRight="15dp"
        android:clickable="true"
        app:fabSize="mini"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="3dp"
        app:rippleColor="@android:color/white"
        app:layout_anchorGravity="center_vertical|center_horizontal"
        android:layout_gravity="top|right"
        android:layout_marginTop="10dp"
        android:id="@+id/deconnectionButton" />

</android.support.design.widget.CoordinatorLayout>
